insercao de borda

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 }
 
 header {
+    font-family: 'Kaushan Script', cursive;
     display: inline;
 }
 
@@ -135,6 +136,8 @@ main {
 }
 
 .container {
+    border: 2px dashed rgb(88, 85, 85);
+    border-radius: 35px;
     position: relative;
     padding: 0 20px;
     min-height: 800px;
@@ -142,10 +145,11 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 20px;
 }
 
-.container>h1 {
-    font-family: 'Kaushan Script', cursive;
+.container > h1 {
+    font-family: var(--menu-font);
     font-size: 30px;
     position: absolute;
     top: 20px;
@@ -250,13 +254,13 @@ footer div {
     border-radius: 50%;
     background-color: inherit;
     position: fixed;
-    right: 5px;
-    bottom: 5px;
+    right: 10px;
+    bottom: 10px;
     z-index: 1;
 }
 footer ion-icon {
-    width: 1.3em;
-    height: 1.3em;
+    width: 1.5em;
+    height: 1.5em;
 } 
 
 
