--- a/style.css
+++ b/style.css
@@ -279,8 +279,8 @@ i {
     border-radius: 10px;
     padding: 20px;
     margin: 10px;
-    -webkit-box-shadow: 3px 3px 5px 2px rgba(0, 0, 0, 0.84);
-    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.84);
+    -webkit-box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     flex-direction: column;
     justify-content: space-between;
 }
